/*
 * $Id: ChangeLog,v 1.3304 2004/08/12 16:07:53 vouchcac Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-08-13 13:05 UTC+0200 Alex Strickland <sscc@mweb.co.za>
  * source/rtl/gtgraph.c
    * Changes on HB_LONG_LONG_OFF branch, the RGB values may not be what the
      author intended? Castings for MSVC.
  * source/rtl/hbhex2n.c
  * source/rtl/hbmd5.c
  * source/rtl/fserror.c
  * source/rtl/hbrandom.c
    * Castings for MSVC.

2004-08-12 21:40 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/memoline.c
    Changed if( ulPos < ulLen || (ulLineNumber == ulLines && ulLineEnd >= ulLineBegin) )
    to      if( ulPos <= ulLen || ( ulLineNumber == ulLines && ulLineEnd >= ulLineBegin ) )

    Clipper returns empty line if last line of memo is terminated by CRLF pair
    xHarbour was returning NULL.

2004-08-12 19:45 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    ! Initialized ::aHighCellColor := {}
      ColorToDisp() was generating an error when oBrw:dehilite() was issued before oBrw:Stabilize().

2004-08-12 03:08 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tget.prg
    ! fixed an incompatibility with clipper, a get on a date value
      with picture "XXXXXXXX" was not editable. See example.

    /*
    	function main()

   			LOCAL ncValore := CToD("")
   			LOCAL cPicture := "XXXXXXXX"
   			LOCAL aGet := { GetNew( 1 , 1 ,;
            				      { |x| Iif( pCount() == 0 , ncValore , ncValore := x ) } , , cPicture ) }

   			ReadModal(aGet)

		return
    */

2004-08-11 23:50 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
	! fixed handling of column's colsep/footsep when tbrowse has not a
	  colsep/footsep and/or only a few columns have a colsep/footsep.

	/*
	  oB := TBrowseNew(...)
	  for i := 1 to 10